Don't check position_needs_update_ in PaintLayer::RectIgnoringNeedsPositionUpdate()

so that we won't crash in showLayerTree() when some layer has dirty
position.

Bug: 770234
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: I7e2a24413a1a9a5912651101e6d295c782232e19
Reviewed-on: https://chromium-review.googlesource.com/868637
Commit-Queue: Xianzhu Wang <wangxianzhu@chromium.org>
Reviewed-by: Stefan Zager <szager@chromium.org>
Cr-Commit-Position: refs/heads/master@{#529649}
Former-commit-id: 4e5497a62e2bfef37f9d44a9a6e18e9e2a2fa764